--- a/app/src/main/res/layout/fragment_memories.xml
+++ b/app/src/main/res/layout/fragment_memories.xml
@@ -20,6 +20,9 @@
 
     <include
         android:id="@+id/createLayout"
-        layout="@layout/fragment_create_memory"/>
+        layout="@layout/fragment_create_memory"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
