--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,5 +24,9 @@
             android:id="@+id/nav_budget"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_budget" />
+        <item
+            android:id="@+id/nav_trips"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_trips" />
     </group>
 </menu>
