--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_registration">
 
     <fragment
         android:id="@+id/nav_home"
@@ -58,4 +58,16 @@
         android:name="com.example.formative_eduv4834254.ui.settings.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
+
+    <fragment
+        android:id="@+id/nav_trips"
+        android:name="com.example.formative_eduv4834254.ui.trips.TripsFragment"
+        android:label="@string/menu_trips"
+        tools:layout="@layout/fragment_trips" />
+
+    <fragment
+        android:id="@+id/nav_trip_details"
+        android:name="com.example.formative_eduv4834254.ui.trips.TripDetailsFragment"
+        android:label="Trip Details"
+        tools:layout="@layout/fragment_trip_details" />
 </navigation>
